[package]
name = "nano-ros-bsp-esp32-qemu"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ESP32-C3 QEMU Board Support Package for nano-ros (OpenETH + zenoh-pico)"
readme = "README.md"

[lib]
name = "nano_ros_bsp_esp32_qemu"

[dependencies]
# Zenoh FFI bindings with smoltcp C platform files (but NOT platform_smoltcp.rs
# Rust module - bridge.rs provides the Rust FFI implementation instead)
zenoh-pico-shim-sys = { path = "../zenoh-pico-shim-sys", features = ["smoltcp"] }

# ESP32-C3 HAL and support crates
esp-hal = { version = "~1.0.0", features = ["esp32c3", "unstable"] }
esp-backtrace = { version = "~0.18.0", features = ["esp32c3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "~0.4.0", features = ["esp32c3"] }
esp-println = { version = "~0.16.0", features = ["esp32c3"] }
esp-alloc = { version = "~0.9.0" }

# OpenCores Ethernet MAC driver (for QEMU open_eth NIC)
openeth-smoltcp = { path = "../openeth-smoltcp" }

# Network stack (version must match openeth-smoltcp's smoltcp dependency)
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
] }

# Core types (RosMessage, CDR serialization)
nano-ros-core = { path = "../nano-ros-core", default-features = false }

# Heapless collections (for keyexpr formatting)
heapless = "0.8"

[features]
default = []
