[package]
name = "nano-ros-bsp-qemu"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "QEMU MPS2-AN385 Board Support Package for nano-ros"
readme = "README.md"

[lib]
name = "nano_ros_bsp_qemu"

[dependencies]
# Zenoh FFI bindings for smoltcp platform
zenoh-pico-shim-sys = { path = "../zenoh-pico-shim-sys", features = ["smoltcp"] }
lan9118-smoltcp = { path = "../lan9118-smoltcp" }

# Embedded dependencies
cortex-m = "0.7"
cortex-m-rt = "0.7"
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
] }

# Semihosting for QEMU output
cortex-m-semihosting = "0.5"
panic-semihosting = "0.6"

# Core types (RosMessage, CDR serialization)
nano-ros-core = { path = "../nano-ros-core", default-features = false }

# Heapless collections (for keyexpr formatting)
heapless = "0.8"

[features]
default = []
# Docker networking mode (container with NAT)
docker = []
