[package]
name = "qemu-rs-listener"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "qemu-rs-listener"
test = false
bench = false

[features]
default = []
# Use Docker network configuration (different IPs for container-based testing)
docker = []

[dependencies]
# High-level bare-metal API
nano-ros-baremetal = { path = "../../crates/nano-ros-baremetal", features = ["qemu-mps2"] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }
