[package]
name = "qemu-rs-talker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "qemu-rs-talker"
test = false
bench = false

[dependencies]
# Shared QEMU networking infrastructure
qemu-rs-common = { path = "../qemu-rs-common" }
lan9118-smoltcp = { path = "../../crates/lan9118-smoltcp" }
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }
